# project-sync

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: release.yml
src/: config.rs  main.rs  projects_watcher.rs  sync.rs  sync_item.rs  sync_manager.rs
